[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/Niveau_1.gd" type="Script" id=1]
[ext_resource path="res://graphisme/hub.png" type="Texture" id=2]
[ext_resource path="res://graphisme/fond.png" type="Texture" id=3]
[ext_resource path="res://graphisme/moove.png" type="Texture" id=4]
[ext_resource path="res://graphisme/porte_fond.png" type="Texture" id=5]
[ext_resource path="res://graphisme/updownbuton.png" type="Texture" id=6]
[ext_resource path="res://graphisme/porte_droite.png" type="Texture" id=7]
[ext_resource path="res://graphisme/lock.png" type="Texture" id=8]
[ext_resource path="res://graphisme/coffre.png" type="Texture" id=9]
[ext_resource path="res://graphisme/cle.png" type="Texture" id=10]
[ext_resource path="res://graphisme/porte_gauche.png" type="Texture" id=11]
[ext_resource path="res://graphisme/Fkey4.png" type="Texture" id=12]
[ext_resource path="res://graphisme/Inventaire.png" type="Texture" id=13]

[node name="Niveau" type="Node" index="0"]

script = ExtResource( 1 )

[node name="hub" type="Sprite" parent="." index="0"]

position = Vector2( 511.212, 299.308 )
scale = Vector2( 1.51038, 1.50154 )
texture = ExtResource( 2 )

[node name="fond" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 512.52, 299.883 )
scale = Vector2( 1.67869, 1.94907 )
texture = ExtResource( 3 )

[node name="moove" type="Sprite" parent="." index="2"]

position = Vector2( 227.616, 462.299 )
scale = Vector2( 1.73912, 2.0871 )
texture = ExtResource( 4 )
flip_h = true
_sections_unfolded = [ "Offset" ]

[node name="Intro" type="Node" parent="." index="3"]

[node name="Go" type="Button" parent="Intro" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_top = 251.0
margin_right = 211.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Level_1" type="Node" parent="." index="4"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Level_1" index="0"]

[node name="Porte_level_1" type="Sprite" parent="Level_1/Graphisme" index="0"]

visible = false
position = Vector2( 656.181, 365.219 )
scale = Vector2( 1.52311, 1.67191 )
texture = ExtResource( 5 )

[node name="Interaction" type="Node" parent="Level_1" index="1"]

[node name="Button_level_1" type="Button" parent="Level_1/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 598.0
margin_top = 265.0
margin_right = 717.0
margin_bottom = 465.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Level_2" type="Node" parent="." index="5"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Level_2" index="0"]

editor/display_folded = true

[node name="updownbuton_level_2" type="Sprite" parent="Level_2/Graphisme" index="0"]

visible = false
position = Vector2( 638.867, 305.377 )
scale = Vector2( 1.67869, 1.94907 )
texture = ExtResource( 6 )

[node name="PorteUp_Level_2" type="Sprite" parent="Level_2/Graphisme" index="1"]

visible = false
position = Vector2( 496.111, 217.75 )
scale = Vector2( 1.28317, 1.44005 )
texture = ExtResource( 5 )

[node name="PorteDown_Level_2" type="Sprite" parent="Level_2/Graphisme" index="2"]

visible = false
position = Vector2( 496.339, 382.267 )
scale = Vector2( 1.28317, 1.44005 )
texture = ExtResource( 5 )

[node name="Interaction" type="Node" parent="Level_2" index="1"]

editor/display_folded = true

[node name="Up_Level_2" type="Button" parent="Level_2/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 608.0
margin_top = 292.0
margin_right = 629.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Down_Level_2" type="Button" parent="Level_2/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 647.0
margin_top = 292.0
margin_right = 665.0
margin_bottom = 323.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Button_Level_2" type="Button" parent="Level_2/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 449.0
margin_top = 295.0
margin_right = 544.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Level_3A" type="Node" parent="." index="6"]

editor/display_folded = true

[node name="Graphisme" type="Node" parent="Level_3A" index="0"]

editor/display_folded = true

[node name="porte_droite" type="Sprite" parent="Level_3A/Graphisme" index="0"]

visible = false
position = Vector2( 857.302, 394.193 )
scale = Vector2( 1.33169, 1.67063 )
texture = ExtResource( 7 )

[node name="exitdoor" type="Sprite" parent="Level_3A/Graphisme" index="1"]

visible = false
position = Vector2( 390.675, 353.819 )
scale = Vector2( 1.65886, 1.87459 )
texture = ExtResource( 5 )

[node name="change" type="Sprite" parent="Level_3A/Graphisme" index="2"]

visible = false
position = Vector2( 628.829, 299.628 )
scale = Vector2( 1.87097, 2.45548 )
texture = ExtResource( 6 )

[node name="locks" type="Sprite" parent="Level_3A/Graphisme" index="3"]

visible = false
position = Vector2( 391.229, 359.173 )
scale = Vector2( 2.04075, 1.86079 )
texture = ExtResource( 8 )

[node name="exitdoor2" type="Sprite" parent="Level_3A/Graphisme" index="4"]

visible = false
position = Vector2( 392.292, 243.902 )
scale = Vector2( 1.65886, 1.87459 )
texture = ExtResource( 5 )

[node name="locks2" type="Sprite" parent="Level_3A/Graphisme" index="5"]

visible = false
position = Vector2( 391.418, 243.836 )
rotation = 3.14159
scale = Vector2( 2.50358, 1.90495 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="Interaction" type="Node" parent="Level_3A" index="1"]

[node name="to3B" type="Button" parent="Level_3A/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 815.0
margin_top = 262.0
margin_right = 897.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="locks" type="Button" parent="Level_3A/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 353.0
margin_top = 298.0
margin_right = 428.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="up" type="Button" parent="Level_3A/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 589.0
margin_top = 277.0
margin_right = 622.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="down" type="Button" parent="Level_3A/Interaction" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 634.0
margin_top = 279.0
margin_right = 664.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="exit" type="Button" parent="Level_3A/Interaction" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 327.0
margin_top = 239.0
margin_right = 458.0
margin_bottom = 467.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Level_3B" type="Node" parent="." index="7"]

editor/display_folded = true

[node name="Graphsime" type="Node" parent="Level_3B" index="0"]

[node name="coffre2" type="Sprite" parent="Level_3B/Graphsime" index="0"]

visible = false
position = Vector2( 494.658, 482.561 )
texture = ExtResource( 9 )

[node name="cle" type="Sprite" parent="Level_3B/Graphsime" index="1"]

visible = false
position = Vector2( 497.114, 476.422 )
texture = ExtResource( 10 )

[node name="porte_gauche" type="Sprite" parent="Level_3B/Graphsime" index="2"]

visible = false
position = Vector2( 154.575, 386.797 )
scale = Vector2( 1.46537, 1.82733 )
texture = ExtResource( 11 )

[node name="coffre" type="Sprite" parent="Level_3B/Graphsime" index="3"]

visible = false
position = Vector2( 492.203, 110.556 )
rotation = -3.14159
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="Interaction" type="Node" parent="Level_3B" index="1"]

[node name="to3A" type="Button" parent="Level_3B/Interaction" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.079
margin_top = 260.711
margin_right = 198.079
margin_bottom = 521.711
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="cle" type="Button" parent="Level_3B/Interaction" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 444.0
margin_top = 448.0
margin_right = 546.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="coffre" type="Button" parent="Level_3B/Interaction" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 444.0
margin_top = 448.0
margin_right = 546.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Final" type="Node" parent="." index="8"]

[node name="porte_fond" type="Sprite" parent="Final" index="0"]

visible = false
position = Vector2( 515.506, 357.794 )
scale = Vector2( 1.58132, 1.83126 )
texture = ExtResource( 5 )

[node name="Fkey4" type="Sprite" parent="Final" index="1"]

visible = false
position = Vector2( 506.751, 476.049 )
scale = Vector2( 2.69839, 2.84974 )
texture = ExtResource( 12 )

[node name="coffre" type="Sprite" parent="Final" index="2"]

visible = false
position = Vector2( 512.104, 464.427 )
scale = Vector2( 1.30683, 1.44758 )
texture = ExtResource( 9 )

[node name="ramass" type="Button" parent="Final" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 439.0
margin_right = 545.0
margin_bottom = 514.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="open2" type="Button" parent="Final" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_top = 412.0
margin_right = 584.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="fini" type="Button" parent="Final" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 456.0
margin_top = 242.0
margin_right = 576.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[node name="Ressource_graphique" type="Node" parent="." index="9"]

[node name="Inventaire" type="Sprite" parent="Ressource_graphique" index="0"]

position = Vector2( 925.433, 33.8081 )
texture = ExtResource( 13 )

[node name="Fkey4" type="Sprite" parent="Ressource_graphique" index="1"]

visible = false
position = Vector2( 981.471, 34.5468 )
scale = Vector2( 1.43878, 1.5512 )
texture = ExtResource( 12 )

[node name="cle" type="Sprite" parent="Ressource_graphique" index="2"]

visible = false
position = Vector2( 921.352, 33.8081 )
texture = ExtResource( 10 )

[connection signal="pressed" from="Intro/Go" to="." method="_on_Go_pressed"]

[connection signal="pressed" from="Level_1/Interaction/Button_level_1" to="." method="_on_Button_level_1_pressed"]

[connection signal="pressed" from="Level_2/Interaction/Up_Level_2" to="." method="_on_Up_Level_2_pressed"]

[connection signal="pressed" from="Level_2/Interaction/Down_Level_2" to="." method="_on_Down_Level_2_pressed"]

[connection signal="pressed" from="Level_2/Interaction/Button_Level_2" to="." method="_on_Button_Level_2_pressed"]

[connection signal="pressed" from="Level_3A/Interaction/to3B" to="." method="_on_to3B_pressed"]

[connection signal="pressed" from="Level_3A/Interaction/locks" to="." method="_on_locks_pressed"]

[connection signal="pressed" from="Level_3A/Interaction/up" to="." method="_on_up_pressed"]

[connection signal="pressed" from="Level_3A/Interaction/down" to="." method="_on_down_pressed"]

[connection signal="pressed" from="Level_3A/Interaction/exit" to="." method="_on_exit_pressed"]

[connection signal="pressed" from="Level_3B/Interaction/to3A" to="." method="_on_to3A_pressed"]

[connection signal="pressed" from="Level_3B/Interaction/cle" to="." method="_on_cle_pressed"]

[connection signal="pressed" from="Level_3B/Interaction/coffre" to="." method="_on_coffre_pressed"]

[connection signal="pressed" from="Final/ramass" to="." method="_on_ramass_pressed"]

[connection signal="pressed" from="Final/open2" to="." method="_on_open2_pressed"]

[connection signal="pressed" from="Final/fini" to="." method="_on_fini_pressed"]


